Media add a few more links

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -273,10 +273,14 @@ The `OP_PEEL` concept may be a good way to implement multi-owner tickets (aka "t
 Welcome the new first-time contributors:
 
 - @Xk9eboF6 ([Decrediton](https://github.com/decred/decrediton/commits?author=Xk9eboF6) translations in Greek)
+- Blockchain Jew ([Decred Magazine](https://www.decredmagazine.com/author/blockchain/) author)
+- Hassan Maishera ([Decred Magazine](https://www.decredmagazine.com/author/hassan/) author)
 
 { _Discover and greet new non-developer contributors too, e.g. first-time DM authors._ }
 
 { _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
+
+- https://www.decredmagazine.com/cli_query-developer-q-a/
 
 Community stats as of Dec 2 (compared to Nov 1):
 
@@ -432,6 +436,18 @@ Secured the following news articles:
 - [Decred vs Litecoin: best alternatives for Bitcoin?](https://www.decredmagazine.com/decred-vs-litecoin-best-alternatives-for-bitcoin/) by @Joao
 - [FTX's collapse intensifies the need for decentralized exchanges](https://www.decredmagazine.com/ftxs-collapse-intensifies-the-need-for-decentralized-exchanges/) by @HassanMaishera
 
+[Decred Magazine](https://www.decredmagazine.com/) engagement stats for November:
+
+- Total number of articles on DM: 349
+- Newsletter subscribers: 77
+- Total newsletters sent - 16
+- Active social media campaigns: 16
+- Completed social media campaigns: 24
+- Social media posts: 147
+- Likes: 823
+- Re-tweets: 198
+- Social media followers across all platforms and accounts: 1,040
+
 { image candidate: technology stack }
 
 **Videos:**
@@ -442,17 +458,20 @@ Secured the following news articles:
 
 - [Decred Community Roundtable - Decred as an interoperable market place](https://www.youtube.com/watch?v=EGRtpI9oPHc) by @Exitus and @phoenixgreen, feat. @h3la1, @MadScrilla1, @c12hz, @DCR\_Uncle
 - [DCRDEX completing a P2P Trade - DCRDEX Fundamentals](https://www.youtube.com/watch?v=xr2Fmg5FMH8) by @phoenixgreen
-- [Blockchain & elections, Jake Yocom-Piatt, Decred](https://invezz.com/news/2022/11/11/video-blockchain-and-elections-jake-yocom-piatt/) by Invezz ([YouTube](https://www.youtube.com/watch?v=cEQv7YdX2sM))
+- [Blockchain & elections, Jake Yocom-Piatt, Decred](https://invezz.com/news/2022/11/11/video-blockchain-and-elections-jake-yocom-piatt/) by Dan Ashmore for Invezz ([YouTube](https://www.youtube.com/watch?v=cEQv7YdX2sM))
 - [Trading scenarios - DCRDEX Fundamentals](https://www.youtube.com/watch?v=6c6McCUMhMQ) by @phoenixgreen
 - [DCRDEX access fiat on and off ramps - DCRDEX Fundamentals](https://www.youtube.com/watch?v=PM8HGR_CUv4) by @phoenixgreen
+- [Jake Yocom-Piatt, co-founder of Decred, on blockchain fixing political voting, campaign spending and privacy](https://www.youtube.com/watch?v=xUqRw4mxjW0) by Matt Zahab for CryptoNews Podcast ep. 182. Also available as a full [text transcript](https://cryptonews.com/exclusives/jake-yocom-piatt-co-founder-of-decred-on-blockchain-fixing-political-voting-campaign-spending-and-privacy.htm) and as a [podcast](https://www.buzzsprout.com/1735660/11757590-182-jake-yocom-piatt-on-on-blockchain-fixing-political-voting-campaign-spending-and-privacy).
 
 Many Decred videos are available in audio format on [Decred Magazine podcast](https://anchor.fm/decred-magazine) on Anchor and all the common podcast platforms like Spotify or Apple.
+
+Our YouTube channel now has a new short link [@DecredTV](https://www.youtube.com/@DecredTV). The videos are also mirrored on [Odysee](https://odysee.com/@Decred:c).
 
 **Audio:**
 
 - { First twitter audio https://twitter.com/i/spaces/1OdKrzMMXOXKX , tell what are "spaces" }
 
-- The first Decred Twitter Spaces meetup was held on November 21 titled [Decred Open Discussion - Self-custody is king](https://twitter.com/i/spaces/1OdKrzMMXOXKX). Twitter Spaces allows users to actively have conversations in real time, with users joining and leaving as they please. Users can request the ability to speak from the hosts running the space. Currently, only users on mobile devices can speak, while web users can only listen. 333 users tuned in.
+- The first Decred Twitter Spaces meetup was held on November 21 titled [Decred Open Discussion - Self-custody is king](https://twitter.com/i/spaces/1OdKrzMMXOXKX). [Twitter Spaces](https://help.twitter.com/en/using-twitter/spaces) allow users to actively have conversations in real time, with users joining and leaving as they please. Users can request the ability to speak from the hosts running the space. Currently, only users on mobile devices can speak, while web users can only listen. 333 users tuned in. The recording is also available on [Anchor](https://anchor.fm/decred-magazine/episodes/Decred-Open-Discussion---Self-Custody-is-King-e1r29tc).
 
 **Art and fun:**
 
@@ -464,7 +483,7 @@ Many Decred videos are available in audio format on [Decred Magazine podcast](ht
 
 **Non-English content:**
 
-- {}
+- [Short Decred intro](https://www.youtube.com/watch?v=MyPbjxKsp1M) Just Crypto (Arabic)
 
 
 ## Discussions
