Media add translations

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -479,7 +479,7 @@ Our YouTube channel now has a new short link [@DecredTV](https://www.youtube.com
 
 **Translations:**
 
-- {}
+- Decred Journal September and October 2022 was [translated](https://xaur.github.io/decred-news/) to Arabic (@arij, @abdulrahman4). Thank you for spreading the word!
 
 **Non-English content:**
 
