--- a/journal/202211.md
+++ b/journal/202211.md
@@ -62,7 +62,7 @@ RPC server:
 
 - Optimized WebSocket client disconnection handling and fixed spurious messages when WebSocket clients disconnect.
 - Modified the [lifecycle](https://github.com/decred/dcrd/pull/3025) of WebSocket clients to use contexts, which is more flexible for the calling code.
-- Added [cancellation support](https://github.com/decred/dcrd/pull/3027) for the `getwork` request and optimized handling of multiple concurrent `getwork` requests. This should benefit some mining configurations. [`getwork`]({ edu link }) is used by mining software to continuously poll the node for new work which is then distributed to mining hardware. It is a very common method in coins that have mining, however Decred miners are encouraged to use the more efficient [`notifywork`]({ api doc }) subscription.
+- Added [cancellation support](https://github.com/decred/dcrd/pull/3027) for the `getwork` request and optimized handling of multiple concurrent `getwork` requests. This should benefit some mining configurations. [`getwork`]({ edu link }) is used by mining software to continuously poll the node for new work which is then distributed to mining hardware. It is a very common method for coins that have mining, however Decred miners are encouraged to use the more efficient [`notifywork`]({ api doc }) subscription.
 
 The RPC testing framework has been moved to the new repository called [`dcrtest`](https://github.com/decred/dcrtest). The framework connects to a dcrd instance and drives it via the [RPC interface]({ edu link }). It is used to write integration-level tests which exercise features and behaviors of the fully compiled dcrd binary. Living in a separate repository now, it provides nicer functionality in terms of selecting a specific version of dcrd to test against by making use of Go's module system instead of always compiling the latest `master` branch. This allows consumers of the testing framework, such as dcrlnd, to provide more quality assurance by testing against release versions of dcrd as well as the latest `master`.
 
@@ -103,15 +103,15 @@ DEX:
 
 Other changes:
 
-- Renamed package `win32ipc` to `dcrwin32ipc` to [avoid confusion](https://github.com/decred/decrediton/pull/3828) with a suspiscious remote package of the same name. It was determined that there was never any risk to Decred software from this other suspicious package and Decrediton's module was always loaded from locally built assets.
+- Renamed package `win32ipc` to `dcrwin32ipc` to [avoid confusion](https://github.com/decred/decrediton/pull/3828) with a suspicious remote package of the same name. It was determined that there was never any risk to Decred software from this other suspicious package and Decrediton's module was always loaded from locally built assets.
 - Revamped [transaction processing](https://github.com/decred/decrediton/pull/3777) code to improve performance and enable automated testing.
 - [Added links](https://github.com/decred/decrediton/pull/3778) to ticket spent and VSP fee on the transactions details page. These links now open locally in Decrediton instead of sending to dcrdata. If the linked transaction is not yet in memory (e.g. it is too old), it will be fetched from dcrwallet in the background.
-- Added a launch step to resend vote preferences to [recently upgradeded VSPs](https://github.com/decred/decrediton/pull/3738). Consensus vote choices sent to a VSP running older software are lost because the VSP is not aware of the new consensus votes. If such VSP upgrades, it may be [necessary](https://github.com/decred/decrediton/issues/3723) to resend vote choices to it, so it could vote on latest consensus agendas with the tickets it manages.
+- Added a launch step to resend vote preferences to [recently upgraded VSPs](https://github.com/decred/decrediton/pull/3738). Consensus vote choices sent to a VSP running older software are lost because the VSP is not aware of the new consensus votes. If such VSP upgrades, it may be [necessary](https://github.com/decred/decrediton/issues/3723) to resend vote choices to it, so it could vote on latest consensus agendas with the tickets it manages.
 - Added [links to documentation](https://github.com/decred/decrediton/pull/3802) in the form of question mark blurbs throughout the wallet.
 - Redesigned the [Trezor pages](https://github.com/decred/decrediton/pull/3570).
 - Removed all [legacy stakepool related code](https://github.com/decred/decrediton/pull/3808). Also cleaned up the code structure relating to ticket purchases and auto buyer. The privacy tab now properly shows that mixes are created every 10 minutes, not 20.
 - Improved the flow of [purchasing one mixed ticket](https://github.com/decred/decrediton/pull/3819) by automating the steps: disable the mixer, buy the ticket, re-enable the mixer.
-- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer @bgptr reports that the process takes 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved.
+- Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer @bgptr reports that the process has become 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved.
 - Added [basic and advanced](https://github.com/decred/decrediton/blob/fabcf6b81d50ac11c9502af0117d654c21e8c3bc/app/i18n/community_translators.md) translations for [Greek](https://github.com/decred/decrediton/pull/3719).
 - Apply [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS5. With this, users can configure dcrd and dcrwallet to communicate over the Tor network.
 - Increased coverage of automated UI tests. { 3814 3811 3821 }
@@ -355,7 +355,7 @@ _Image: Approximate historical dcrd version distribution._
 
 { _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.0-61.1%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 265-445K DCR.
 
-Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 67 nodes (-2), 104 channels (-8) with a total capacity of 40.6 DCR (-6.3), as of Dec 1. Thanks to @karamble for providing the data while the [LN map](https://ln-map.jholdstock.uk/) is on maintenance.
+Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 67 nodes (-2), 104 channels (-8) with a total capacity of 40.6 DCR (-6.3), as of Dec 1. Thanks to @karamble for providing the data while the [LN map](https://ln-map.jholdstock.uk/) is undergoing maintenance.
 
 { _Check new charts!_ }
 
@@ -370,7 +370,7 @@ Tweet timestamping bot is active again. Mention [@dcrtimestampbot](https://twitt
 
 Decred wallets for Android and iOS have been removed from [Google Play](https://play.google.com/store/apps/details?id=com.decred.dcrandroid.mainnet) and [Apple Store](https://apps.apple.com/us/app/decred-wallet/id1462247643) locations announced in the [v1.7.0 release](https://www.reddit.com/r/decred/comments/umye1t/decred_mobile_wallet_v170_has_been_released_for/), as well as the APK downloads from the [Android release](https://github.com/planetdecred/dcrandroid/releases). The [source code](https://github.com/planetdecred) is still available on GitHub.
 
-Binance has [increased](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$YgdoiqEwjnnrJIKugu6p6u95Edf9YsRHQpz-HmEoSaU?via=decred.org&via=matrix.org) personal quota for their [Simple Earn](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82) offering for DCR from 15 DCR to 300 DCR per person, and also bumped up the yield from 2.5% to 3.5%.
+Binance has [increased](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$YgdoiqEwjnnrJIKugu6p6u95Edf9YsRHQpz-HmEoSaU?via=decred.org&via=matrix.org) the personal quota for their [Simple Earn](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82) offering for DCR from 15 DCR to 300 DCR per person, and also bumped up the yield from 2.5% to 3.5%.
 
 [Poloniex](https://poloniex.com) made several updates to DCR. The 10-month wallet [maintenance](https://twitter.com/PoloSupport/status/1486355294493888512) (started 2 days after the [v1.7.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.7.0)) is finally over and deposits and withdrawals are working again. DCR/BTC trading pair has been re-enabled, and a new DCR/USDT pair has been added. In the first week of trading, the USDT pair had around 620 DCR traded daily, outperforming the BTC pair with around 200 DCR daily. { _trade stats are ok here but can also move to Markets_ }
 
