--- a/journal/202211.md
+++ b/journal/202211.md
@@ -1,16 +1,10 @@
 # {DRAFT} Decred Journal – November 2022
 
-{ _Only remove DRAFT from the title when all other todos are solved, at the very end. Search for `{` to see what's left._ }
-
-{ _Hint: Hints just add context. If it doesn't start with "Hint: ", it is a task. This was a hint._ }
-
-{ _Hint: Read the Guidelines on how to make DJ great: https://github.com/xaur/decred-news/blob/docs/guidelines.md ._}
-
-![{alt text}](../img/{file.ext} "{hover tooltip text}")
+![](../img/{file.ext}) { upload }
 
 _Image: { "Title by @author. Description..." OR just "Description..." }_
 
-{ _Month's highlights, no links here, 5-7 bullets max._
+November's highlights:
 
 - There were new bug-fixing releases of Decrediton (v1.7.6) and DCRDEX (v0.5.6).
 
@@ -18,11 +12,7 @@ _Image: { "Title by @author. Description..." OR just "Description..." }_
 
 - @dcrtimestampbot on twitter has been re-activated following the successful approval of the proposal to fund it. This follows on from the high profile use of the Decred chain for timestamping in the Brazilian national elections concluded in October, where Lula and the governor of Sau Paulo timestamped their plans for governance on the Decred chain to combat fake news.
 
-- 
-
-- 
-
-}
+- { other? }
 
 Contents: { _Sync ToC at the very end, when all text is finished_ }
 
@@ -56,7 +46,6 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 - [Enabled](https://github.com/decred/dcrd/pull/3017) and set [as default](https://github.com/decred/dcrd/pull/3019) new peer-to-peer protocol version that no longer uses the `reject` message. The message was inherited from the original btcsuite codebase and was used to signal that a transaction or a block is ["rejected"](https://en.bitcoin.it/wiki/Protocol_documentation#reject) by a peer. Using this message for pretty much anything was unreliable or incorrect and a [proposal](https://github.com/decred/dcrd/issues/2546) was made to remove it. Peers negotiating to this new protocol version will no longer send `reject` messages and consider it a violation if they receive it. Any peers negotiating to an older version will not be punished for sending `reject` and it will be ignored by newer nodes.
 - Added new [IPC events](https://github.com/decred/dcrd/pull/3020) to notify the parent process of the address and port assigned to dcrd. In configurations where dcrd is controlled by another process like Decrediton or an automated test runner, that parent process needs to know which addresses and ports dcrd uses for its P2P interface (talking to the public network) and RPC interface (local communications with wallets and other clients). This change provides a reliable way to discover dcrd's ports when they are randomly assigned by the operating system and not configured by the parent process.
 - Always respond to [`getheaders`](https://github.com/decred/dcrd/pull/3030) requests from peers. Previous logic would not respond to `getheaders` if the local chain was not considered to be fully synced with the network. In the old "blocks first" syncing model it helped to avoid some undesirable corner cases, like unnecessarily downloading blocks. It had downsides too, like a node could appear to be unresponsive or stalled to its peers, while being active and simply not having any interesting data to share. In the current "headers first" syncing model this limitation is no longer necessary, and serving up headers before the peer is known to be current no longer leads to undesirable behavior.
-- Other internal/infra changes { 3021 3023 3022 - drop after review }
 
 RPC server:
 
@@ -114,8 +103,8 @@ Other changes:
 - Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer @bgptr reports that the process has become 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved.
 - Added [basic and advanced](https://github.com/decred/decrediton/blob/fabcf6b81d50ac11c9502af0117d654c21e8c3bc/app/i18n/community_translators.md) translations for [Greek](https://github.com/decred/decrediton/pull/3719).
 - Apply [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS5. With this, users can configure dcrd and dcrwallet to communicate over the Tor network.
-- Increased coverage of automated UI tests. { 3814 3811 3821 }
-- Dependency upgrades { 3826 3833 3827 }, including a switch to [Node 16](https://github.com/decred/decrediton/pull/3837) and [Electron 18](https://github.com/decred/decrediton/pull/3832).
+- Increased coverage of automated UI tests.
+- Dependency upgrades, including a switch to [Node 16](https://github.com/decred/decrediton/pull/3837) and [Electron 18](https://github.com/decred/decrediton/pull/3832).
 
 { maybe further break down into smaller lists }
 
@@ -165,7 +154,7 @@ _[vspd](https://github.com/decred/vspd) is server software for running a Voting 
 
 - Added a [`vote-validator` tool](https://github.com/decred/vspd/pull/335). This allows VSP admins to verify that their vspd deployment is voting correctly according to user preferences.
 - Include [Git commit](https://github.com/decred/vspd/pull/357) in app version string.
-- Added a [reusable HTTP client module](https://github.com/decred/vspd/pull/359) for vspd API consumers. This will be useful for dcrwallet, dcrwebapi, and testing tools such as v3tool. { _logically includes 356 360 - just noting for now_ }
+- Added a [reusable HTTP client module](https://github.com/decred/vspd/pull/359) for vspd API consumers. This will be useful for dcrwallet, dcrwebapi, and testing tools such as v3tool.
 - [Build system](https://github.com/decred/vspd/pull/362) improvements.
 
 
@@ -263,10 +252,6 @@ In the research department, @matheusd published [OP_PEEL: Unilaterally exitable 
 
 The `OP_PEEL` concept may be a good way to implement multi-owner tickets (aka "ticket splitting"), but other applications could build on it as well.
 
-- { _What other apps are possible?_ }
-- { _Is `OP_PEEL` specific to LN?_ }
-- { scan https://matrix.to/#/!kqBAIpKYUzqYFVHorm:decred.org/$TXdw-JqCGgOXCsV9Ey1tY2xgnsl5CDja7CGOKpO7rzs?via=decred.org&via=matrix.org }
-
 
 ## People
 
@@ -275,8 +260,6 @@ Welcome the new first-time contributors:
 - @Xk9eboF6 ([Decrediton](https://github.com/decred/decrediton/commits?author=Xk9eboF6) translations in Greek)
 - Blockchain Jew ([Decred Magazine](https://www.decredmagazine.com/author/blockchain/) author)
 - Hassan Maishera ([Decred Magazine](https://www.decredmagazine.com/author/hassan/) author)
-
-{ _Discover and greet new non-developer contributors too, e.g. first-time DM authors._ }
 
 { _Interviews with contributors. Link to #media for generic references (e.g. "Check the 3 interviews with devs") or link directly when referencing a specific interview._ }
 
@@ -353,7 +336,7 @@ _Image: Reachable dcrd node versions._
 
 _Image: Approximate historical dcrd version distribution._
 
-{ _Optional_ } The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.0-61.1%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 265-445K DCR.
+The share of [mixed coins](https://dcrdata.decred.org/charts?chart=coin-supply&zoom=jz3q237o-la8vk000&scale=linear&bin=day&axis=time&visibility=true-true-true) varied between 61.0-61.1%. Daily [mixed amount](https://dcrdata.decred.org/charts?chart=privacy-participation&bin=day&axis=time) varied between 265-445K DCR.
 
 Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 67 nodes (-2), 104 channels (-8) with a total capacity of 40.6 DCR (-6.3), as of Dec 1. Thanks to @karamble for providing the data while the [LN map](https://ln-map.jholdstock.uk/) is undergoing maintenance.
 
