Dev DCRDEX fold fixes into 1 bullet

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -195,18 +195,11 @@ Client, user-facing changes:
 - Made order placement [more responsive](https://github.com/decred/dcrdex/pull/1887). The order form will close sooner and order submission will continue in the background.
 - Show or hide [advanced order options](https://github.com/decred/dcrdex/pull/1885) by default.
 - Fixed bug where [fiat rates](https://github.com/decred/dcrdex/pull/1974) weren't being displayed. Frequency of fetching fiat rates has been reduced to avoid hitting the rate limits.
+- ~6 smaller fixes and tweaks.
 
 Client, BTC wallet:
 
 - Users can now [see and manage the peers](https://github.com/decred/dcrdex/pull/1931) that the BTC SPV wallets are connected to, as well as add new peers.
-- Test fixes { 1939 }
-
-Client, internal:
-
-- Keep revoked matches as "active" until the [redeeming tx is confirmed](https://github.com/decred/dcrdex/pull/1948), which is a bit more robust. { _minor, group?_ }
-- Fixed the timing of notifications during [wallet creation](https://github.com/decred/dcrdex/pull/1922). { _minor, group?_ }
-- Fixed [error](https://github.com/decred/dcrdex/pull/1953) on markets page for unsupported wallets. Fixed panic when trying to create specific wallets. { _minor, group with other fixes_ }
-- Various other tweaks/fixes. { 1943 1964 }
 
 Fidelity bonds (client and server):
 
