--- a/journal/202211.md
+++ b/journal/202211.md
@@ -90,23 +90,24 @@ DEX:
 - When changing [wallet passphrase](https://github.com/decred/decrediton/pull/3822), users can enter their DEX app password to make the DEX aware of the new wallet passphrase. This fixes confusing passphrase change UX for those using the DEX via Decrediton.
 - Fixed problem where DEX window [wouldn't launch](https://github.com/decred/decrediton/pull/3831) after reloading UI.
 
-Other changes:
+UX upgrades:
 
-- Renamed package `win32ipc` to `dcrwin32ipc` to [avoid confusion](https://github.com/decred/decrediton/pull/3828) with a suspicious remote package of the same name. It was determined that there was never any risk to Decred software from this other suspicious package and Decrediton's module was always loaded from locally built assets.
-- Revamped [transaction processing](https://github.com/decred/decrediton/pull/3777) code to improve performance and enable automated testing.
 - [Added links](https://github.com/decred/decrediton/pull/3778) to ticket spent and VSP fee on the transactions details page. These links now open locally in Decrediton instead of sending to dcrdata. If the linked transaction is not yet in memory (e.g. it is too old), it will be fetched from dcrwallet in the background.
 - Added a launch step to resend vote preferences to [recently upgraded VSPs](https://github.com/decred/decrediton/pull/3738). Consensus vote choices sent to a VSP running older software are lost because the VSP is not aware of the new consensus votes. If such VSP upgrades, it may be [necessary](https://github.com/decred/decrediton/issues/3723) to resend vote choices to it, so it could vote on latest consensus agendas with the tickets it manages.
 - Added [links to documentation](https://github.com/decred/decrediton/pull/3802) in the form of question mark blurbs throughout the wallet.
 - Redesigned the [Trezor pages](https://github.com/decred/decrediton/pull/3570).
-- Removed all [legacy stakepool related code](https://github.com/decred/decrediton/pull/3808). Also cleaned up the code structure relating to ticket purchases and auto buyer. The privacy tab now properly shows that mixes are created every 10 minutes, not 20.
 - Improved the flow of [purchasing one mixed ticket](https://github.com/decred/decrediton/pull/3819) by automating the steps: disable the mixer, buy the ticket, re-enable the mixer.
 - Voting preferences now [update asynchronously](https://github.com/decred/decrediton/pull/3801). Developer @bgptr reports that the process has become 3 times faster on mainnet (3 seconds vs 11 seconds). The error handling was also improved.
+
+Other changes:
+
+- Renamed package `win32ipc` to `dcrwin32ipc` to [avoid confusion](https://github.com/decred/decrediton/pull/3828) with a suspicious remote package of the same name. It was determined that there was never any risk to Decred software from this other suspicious package and Decrediton's module was always loaded from locally built assets.
+- Revamped [transaction processing](https://github.com/decred/decrediton/pull/3777) code to improve performance and enable automated testing.
+- Removed all [legacy stakepool related code](https://github.com/decred/decrediton/pull/3808). Also cleaned up the code structure relating to ticket purchases and auto buyer. The privacy tab now properly shows that mixes are created every 10 minutes, not 20.
 - Added [basic and advanced](https://github.com/decred/decrediton/blob/fabcf6b81d50ac11c9502af0117d654c21e8c3bc/app/i18n/community_translators.md) translations for [Greek](https://github.com/decred/decrediton/pull/3719).
 - Apply [proxy settings](https://github.com/decred/decrediton/pull/3803) to dcrd and dcrwallet when the proxy type is SOCKS5. With this, users can configure dcrd and dcrwallet to communicate over the Tor network.
 - Increased coverage of automated UI tests.
 - Dependency upgrades, including a switch to [Node 16](https://github.com/decred/decrediton/pull/3837) and [Electron 18](https://github.com/decred/decrediton/pull/3832).
-
-{ maybe further break down into smaller lists }
 
 Fixes:
 
