Add sections for Decrediton and DEX releases

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -28,7 +28,29 @@ Contents: { _Sync ToC at the very end, when all text is finished_ }
 - [Markets](#markets)
 - [Relevant External](#relevant-external)
 
-{ _Add individual sections for high-impact announcements before Development, such as consensus votes, software releases, milestones, major bugs, etc._ }
+
+## Decrediton v1.7.6 Release
+
+This release fixes a few issues with the DEX (module updated to v0.5.6), plus 1 fix for Windows:
+
+- DEX: Fixed processing of certain Bitcoin Taproot transactions.
+- DEX: Fixed some mixed Decred wallet setups.
+- DEX: Fixed misleading sync status in built-in Decred wallets.
+- Fixed domain name resolution using alternative DNS servers configured in the system (Windows).
+
+Get the [latest release](https://github.com/decred/decred-binaries/releases) on GitHub. As always, we recommend to [verify the files](https://docs.decred.org/advanced/verifying-binaries) before running.
+
+
+## DCRDEX v0.5.7 Release
+
+The standalone DEX app is slightly ahead of the Decrediton version noted above, including these changes since v0.5.6:
+
+- Fixed a case where the client could fail to complete order cancellation but report successful cancellation, resulting in the order remaining in the book on the server.
+- Added automatic cancellation of orders received from the server that the client does not know about, fixing a few edge cases.
+
+This release also comes with a signature made by @chappjc's key `761D6A0BEB286C9B6A65DD053F857EEA746C64D1`, making it possible to [verify](https://docs.decred.org/advanced/verifying-binaries) DEX downloads until they are available as part of the next [core software release](https://github.com/decred/decred-binaries/releases).
+
+The latest DEX app can be downloaded [here](https://github.com/decred/dcrdex/releases).
 
 
 ## Development
