--- a/journal/202211.md
+++ b/journal/202211.md
@@ -299,11 +299,11 @@ The [treasury spend tx](https://dcrdata.decred.org/tx/95ebb23a0846417eb1aa6a59bf
 
 As of Dec 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 830,186 DCR (17.8 million USD at $21.48).
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Balance_DCR.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Balance_DCR.png) { upload }
 
 _Image: Treasury balance history._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Inflows_Outflows_DCR.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Inflows_Outflows_DCR.png) { upload }
 
 _Image: Treasury monthly inflows and outflows._
 
@@ -314,7 +314,7 @@ The [proposal](https://proposals.decred.org/record/0848cc9) to fund [@dcrtimesta
 
 **Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~87 Ph/s and closed ~68 Ph/s, bottoming at 50 Ph/s and peaking at 93 Ph/s throughout the month.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Network_Daily_Hashrate.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Network_Daily_Hashrate.png) { upload }
 
 _Image: Decred hashrate._
 
@@ -322,13 +322,15 @@ Distribution of 75 Ph/s hashrate [reported](https://miningpoolstats.stream/decre
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Dec 1: Poolin 51%, F2Pool 32%, (likely) AntPool 10%, BTC.com 6%, CoinMine 0.2%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Hashrate%20Distribution%20(Phs).png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Hashrate%20Distribution%20(Phs).png) { upload }
 
 _Image: Pool hashrate distribution._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_Hash_Dist.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_Hash_Dist.png) { upload }
 
 _Image: Historical pool hashrate distribution._
+
+{ _^switch to another fun chart if buggy_ }
 
 **Staking**: [Ticket price](https://dcrdata.decred.org/charts?chart=ticket-price&axis=time&visibility=true-true&mode=stepped) varied between 226-237 DCR, with 30-day [average](https://dcrstats.com/) at 231.5 DCR (-2.2).
 
@@ -338,17 +340,17 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 Biggest gainers in November are ultravsp.uk (+497) and decredvoting.com (+83).
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { upload }
 
 _Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 112 dcrd nodes on Dec 1: v1.7.1 - 27%, v1.8.0 dev builds - 17%, v1.7.5 - 17%, v1.7.2 - 13%, v1.7.0 - 13%, v1.7.4 - 4%, other - 11%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Reachable%20Node%20Versions.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Reachable%20Node%20Versions.png) { upload }
 
 _Image: Reachable dcrd node versions._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_NodeDistribution.png)
+![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_NodeDistribution.png) { upload }
 
 _Image: Approximate historical dcrd version distribution._
 
