--- a/journal/202211.md
+++ b/journal/202211.md
@@ -10,7 +10,7 @@ November's highlights:
 
 - The big crypto news in Nov 2022 was the unwinding of the FTX fraud, with their ceasing to process withdrawals leading to a wave of contagion which affected a number of high profile exchanges and funds. These events should make the non-custodial and "proof of reserves" advantages of DCRDEX more salient.
 
-- @dcrtimestampbot on twitter has been re-activated following the successful approval of the proposal to fund it. This follows on from the high profile use of the Decred chain for timestamping in the Brazilian national elections concluded in October, where Lula and the governor of Sau Paulo timestamped their plans for governance on the Decred chain to combat fake news.
+- @dcrtimestampbot on twitter has been re-activated following the successful approval of the proposal to fund it. This comes after the high profile use of the Decred chain for timestamping in the Brazilian national elections concluded in October, where Lula and Haddad, the former Mayor of São Paulo, timestamped their plans for governance on the Decred chain to combat fake news.
 
 - { other? }
 
