--- a/journal/202211.md
+++ b/journal/202211.md
@@ -14,8 +14,10 @@ November's highlights:
 
 - { other? }
 
-Contents: { _Sync ToC at the very end, when all text is finished_ }
+Contents:
 
+- [Decrediton v1.7.6 Release](#decrediton-v176-release)
+- [DCRDEX v0.5.7 Release](#dcrdex-v057-release)
 - [Development](#development)
 - [People](#people)
 - [Governance](#governance)
@@ -96,7 +98,7 @@ _[Decrediton](https://github.com/decred/decrediton) is a full-featured desktop w
 
 - [Upgraded](https://github.com/decred/decrediton/pull/3834) DCRDEX module to v0.5.6 (bug fixes for BTC and DCR) and added an icon to the DEX window.
 
-Decredition's Wallet Launcher has been [redesigned](https://github.com/decred/decrediton/pull/3690):
+Towards the next release on `master`, the Wallet Launcher has been [redesigned](https://github.com/decred/decrediton/pull/3690):
 
 - Added onboarding tutorials to the launcher.
 - Added gradients to the wallet cards. Each wallet's gradient is saved in the config.
@@ -368,6 +370,8 @@ Decred's [Lightning Network](https://ln-map.jholdstock.uk/) explorer has seen 67
 
 { _Check new charts!_ }
 
+Thanks to @bochinchero for improving the charts and adding new ones. Full chart sets are available [here](https://github.com/bochinchero/dcrsnapshots) for reuse.
+
 
 ## Ecosystem
 
@@ -381,7 +385,7 @@ Decred wallets for Android and iOS have been removed from [Google Play](https://
 
 Binance has [increased](https://matrix.to/#/!teQafvHMYpIbqLIieU:decred.org/$YgdoiqEwjnnrJIKugu6p6u95Edf9YsRHQpz-HmEoSaU?via=decred.org&via=matrix.org) the personal quota for their [Simple Earn](https://www.binance.com/en/support/announcement/binance-adds-new-assets-to-simple-earn-flexible-products-2022-10-20-87e0f4b74c884d83b09ae4f3c2fd7b82) offering for DCR from 15 DCR to 300 DCR per person, and also bumped up the yield from 2.5% to 3.5%.
 
-[Poloniex](https://poloniex.com) made several updates to DCR. The 10-month wallet [maintenance](https://twitter.com/PoloSupport/status/1486355294493888512) (started 2 days after the [v1.7.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.7.0)) is finally over and deposits and withdrawals are working again. DCR/BTC trading pair has been re-enabled, and a new DCR/USDT pair has been added. In the first week of trading, the USDT pair had around 620 DCR traded daily, outperforming the BTC pair with around 200 DCR daily. { _trade stats are ok here but can also move to Markets_ }
+[Poloniex](https://poloniex.com) has completed its 10-month-long [maintenance](https://twitter.com/PoloSupport/status/1486355294493888512) of the DCR wallet which started 2 days after the [v1.7.0 release](https://github.com/decred/decred-binaries/releases/tag/v1.7.0). Deposits and withdrawals are working again and there is a new DCR/USDT trading pair.
 
 Warning: the authors of the Decred Journal have no idea about the trustworthiness of any of the services above. Please do your own research before trusting your personal information or assets to any entity.
 
@@ -410,19 +414,17 @@ Secured the following news articles:
 
 **Upcoming:**
 
-- 12/20/2022 at 18:30 UTC+1 - Entrepreneur's Evening - Casablanca, {Morocco}.
-
-@arij have been chosen as a panelist for the 17th edition of the Entrepreneur's Evening hosted by JCI Casablanca with the topic "Female Entrepreneurship," where she will share her experience working with Decred project and how it is to work in the blockchain domain as a woman.
+- @arij has been chosen as a panelist for the 17th edition of the Entrepreneur's Evening hosted by JCI Casablanca, Morocco, with the topic "Female Entrepreneurship", where she will share her experience working with Decred project and how it is to work in the blockchain domain as a woman. The event is scheduled for December 20.
 
 
 ## Media
 
 **Selected articles:**
 
-- [New Use for Blockchain: Setting the Record Straight in Political Battles](https://thefintechtimes.com/new-use-for-blockchain-setting-the-record-straight-in-political-battles/) by Francis Bignell for Fintech Times
+- [New use for blockchain: Setting the record straight in political battles](https://thefintechtimes.com/new-use-for-blockchain-setting-the-record-straight-in-political-battles/) by Francis Bignell for Fintech Times
 - [Decred's stand on censorship in the blockchain](https://www.decredmagazine.com/decreds-stand-on-censorship-in-the-blockchain/) by @BlockchainJew
 - [Brazil new president used Decred blockchain to improve his campaign!](https://www.decredmagazine.com/brazil-new-president-uses-decred-blockchain-to-improve-his-camapign/) by @Joao
-- [FTX - Playing with other peoples money](https://www.decredmagazine.com/ftx-playing-with-other-peoples-money/) - Twitter thread by @jy-p republished on DM
+- [FTX - Playing with other peoples money](https://www.decredmagazine.com/ftx-playing-with-other-peoples-money/) - @jy-p's Twitter thread reposted as a Decred Magazine article
 - [Decred's technology stack overview](https://www.decredmagazine.com/decreds-technology-stack-overview/) by @phoenixgreen
 - [Decred grows with good governance](https://www.decredmagazine.com/decred-grows-with-good-governance/) by @OfficialCryptos
 - [Reviewing DEX security](https://www.decredmagazine.com/reviewing-dex-security/) by @BlockchainJew
@@ -528,7 +530,7 @@ Most information from third parties is relayed directly from the source after a 
 
 Credits (alphabetical order):
 
-- writing, editing, publishing: { bee, bochinchero, Exitus, jz, l1ndseymm, phoenixgreen, richardred }
+- writing, editing, publishing: { bee, bochinchero, Exitus, jz, karamble, l1ndseymm, phoenixgreen, richardred }
 - reviews and feedback: davecgh
-- title image: {}
+- title image: { Exitus }
 - funding: Decred stakeholders
