Dev add 3 edu links

--- a/journal/202211.md
+++ b/journal/202211.md
@@ -75,9 +75,9 @@ RPC server:
 
 - Optimized WebSocket client disconnection handling and fixed spurious messages when WebSocket clients disconnect.
 - Modified the [lifecycle](https://github.com/decred/dcrd/pull/3025) of WebSocket clients to use contexts, which is more flexible for the calling code.
-- Added [cancellation support](https://github.com/decred/dcrd/pull/3027) for the `getwork` request and optimized handling of multiple concurrent `getwork` requests. This should benefit some mining configurations. [`getwork`]({ edu link }) is used by mining software to continuously poll the node for new work which is then distributed to mining hardware. It is a very common method for coins that have mining, however Decred miners are encouraged to use the more efficient [`notifywork`]({ api doc }) subscription.
+- Added [cancellation support](https://github.com/decred/dcrd/pull/3027) for the `getwork` request and optimized handling of multiple concurrent `getwork` requests. This should benefit some mining configurations. [`getwork`](https://en.bitcoin.it/wiki/Getwork) is used by mining software to continuously poll the node for new work which is then distributed to mining hardware. It is a very common method for coins that have mining, however Decred miners are encouraged to use the more efficient [`notifywork`](https://github.com/decred/dcrd/blob/0e7920ce30257aa1aced00e34ac637423f50965e/docs/json_rpc_api.mediawiki#notifywork) subscription.
 
-The RPC testing framework has been moved to the new repository called [`dcrtest`](https://github.com/decred/dcrtest). The framework connects to a dcrd instance and drives it via the [RPC interface]({ edu link }). It is used to write integration-level tests which exercise features and behaviors of the fully compiled dcrd binary. Living in a separate repository now, it provides nicer functionality in terms of selecting a specific version of dcrd to test against by making use of Go's module system instead of always compiling the latest `master` branch. This allows consumers of the testing framework, such as dcrlnd, to provide more quality assurance by testing against release versions of dcrd as well as the latest `master`.
+The RPC testing framework has been moved to the new repository called [`dcrtest`](https://github.com/decred/dcrtest). The framework connects to a dcrd instance and drives it via the [RPC interface](https://bitcoin.stackexchange.com/questions/24163/what-does-the-bitcoin-rpc-mean-and-how-is-it-used). It is used to write integration-level tests which exercise features and behaviors of the fully compiled dcrd binary. Living in a separate repository now, it provides nicer functionality in terms of selecting a specific version of dcrd to test against by making use of Go's module system instead of always compiling the latest `master` branch. This allows consumers of the testing framework, such as dcrlnd, to provide more quality assurance by testing against release versions of dcrd as well as the latest `master`.
 
 
 ### dcrwallet
