--- a/journal/202211.md
+++ b/journal/202211.md
@@ -1,6 +1,6 @@
 # {DRAFT} Decred Journal – November 2022
 
-![](../img/{file.ext}) { upload }
+![](../img/202211.1.github.png)
 
 _Image: Untitled by @Exitus_
 
@@ -149,11 +149,11 @@ Dev tools and docs:
 - Documented how to install and upgrade [Electron devtools](https://github.com/decred/decrediton/pull/3825).
 - Added scripts to analyze [bundle size](https://github.com/decred/decrediton/pull/3826).
 
-![](https://user-images.githubusercontent.com/52497040/152214641-f5c12685-1bd1-49bd-af55-64c7fc784e94.png) { upload }
+![](../img/202211.2.github.png)
 
 _Image: Redesigned Decrediton launching. Decreducate youtself while your wallet is syncing._
 
-![](https://user-images.githubusercontent.com/52497040/137967341-cf16120c-4570-4db6-b858-8c1c73aa384d.png) { upload }
+![](../img/202211.3.github.png)
 
 _Image: Redesigned Trezor setup in Decrediton._
 
@@ -242,7 +242,7 @@ Server:
 - Fail fast if [transaction index](https://github.com/decred/dcrdex/pull/1973) is not enabled for Bitcoin-like assets. It is essential for DEX operation, without the index the DEX will fail to look up transactions.
 - Fixed calculation of [DOGE fees](https://github.com/decred/dcrdex/pull/1965).
 
-![](https://user-images.githubusercontent.com/6109680/184463497-334904f3-c71e-4091-89c2-247d817f41a5.png) { upload }
+![](../img/202211.4.github.png)
 
 _Image: Your market-maker bot assistant in DCRDEX._
 
@@ -303,11 +303,11 @@ The [treasury spend tx](https://dcrdata.decred.org/tx/95ebb23a0846417eb1aa6a59bf
 
 As of Dec 10, combined balance of [legacy](https://dcrdata.decred.org/address/Dcur2mcGjmENx4DhNqDctW5wJCVyT3Qeqkx) and [new treasury](https://dcrdata.decred.org/treasury) is 830,186 DCR (17.8 million USD at $21.48).
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Balance_DCR.png) { upload }
+![](../img/202211.5.github.png)
 
 _Image: Treasury balance history._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Treasury_Inflows_Outflows_DCR.png) { upload }
+![](../img/202211.6.github.png)
 
 _Image: Treasury monthly inflows and outflows._
 
@@ -318,7 +318,7 @@ The [proposal](https://proposals.decred.org/record/0848cc9) to fund [@dcrtimesta
 
 **Hashrate**: November's [hashrate](https://dcrdata.decred.org/charts?chart=hashrate&scale=linear&bin=day&axis=time) opened at ~87 Ph/s and closed ~68 Ph/s, bottoming at 50 Ph/s and peaking at 93 Ph/s throughout the month.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Network_Daily_Hashrate.png) { upload }
+![](../img/202211.7.github.png)
 
 _Image: Decred hashrate._
 
@@ -326,11 +326,11 @@ Distribution of 75 Ph/s hashrate [reported](https://miningpoolstats.stream/decre
 
 Distribution of 1,000 blocks actually [mined](https://miningpoolstats.stream/decred) by Dec 1: Poolin 51%, F2Pool 32%, (likely) AntPool 10%, BTC.com 6%, CoinMine 0.2%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Hashrate%20Distribution%20(Phs).png) { upload }
+![](../img/202211.8.github.png)
 
 _Image: Pool hashrate distribution._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_Hash_Dist.png) { upload }
+![](../img/202211.9.github.png)
 
 _Image: Historical pool hashrate distribution._
 
@@ -342,17 +342,17 @@ The [locked amount](https://dcrdata.decred.org/charts?chart=ticket-pool-value&sc
 
 Biggest gainers in November are ultravsp.uk (+497) and decredvoting.com (+83).
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Voting%20Service%20Provider%20(VSP)%20-%20Live%20Ticket%20Distribution.png) { upload }
+![](../img/202211.10.github.png)
 
 _Image: Distribution of tickets managed by VSPs._
 
 **Nodes**: [Decred Mapper](https://nodes.jholdstock.uk/user_agents) observed 112 dcrd nodes on Dec 1: v1.7.1 - 27%, v1.8.0 dev builds - 17%, v1.7.5 - 17%, v1.7.2 - 13%, v1.7.0 - 13%, v1.7.4 - 4%, other - 11%.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Reachable%20Node%20Versions.png) { upload }
+![](../img/202211.11.github.png)
 
 _Image: Reachable dcrd node versions._
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/Daily_NodeDistribution.png) { upload }
+![](../img/202211.12.github.png)
 
 _Image: Historical dcrd version distribution, data from nodes.jholdstock.uk._
 
@@ -434,7 +434,7 @@ Secured the following news articles:
 - Re-tweets: 198
 - Social media followers across all platforms and accounts: 1,040
 
-![](https://www.decredmagazine.com/content/images/2022/11/Decred-Technology-Stack-min.jpg) { upload }
+![](../img/202211.13.github.jpg)
 
 _Image: Decred technology stack overview._
 
@@ -488,7 +488,7 @@ Selected Twitter discussions:
 
 In November DCR was trading between USDT 18.30-28.80 / BTC 0.00115-0.00146. The average daily rate was $21.92.
 
-![](https://raw.githubusercontent.com/bochinchero/dcrsnapshots/main/2022-11/700/DEX_Monthly_Vol_USD.png) { upload }
+![](../img/202211.14.github.png)
 
 _Image: DCRDEX monthly volume in USD._
 
