--- a/journal/202212.md
+++ b/journal/202212.md
@@ -163,7 +163,25 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-- {}
+Client, fidelity bonds:
+
+- Third batch of [fidelity bonds](https://github.com/decred/dcrdex/pull/1820) implementation was merged, building on the lower-level API and server code added in October and November. This batch adds internal client code to create, store, post, confirm, and refund the bonds, as well as `dexc` app command for posting bond from the command line. Bonds implementaion was split into phases to make review feasible and progress in parallel with multiple other developments. Up next is account tier maintenance, bond renewal, settings, and UI components.
+- Documented bonds in the [spec](https://github.com/decred/dcrdex/pull/1994).
+- For a recap, time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Users will lock coins in bonds and gain permissions to trade, as long as their bond tier is high enough (possibly compensating for poor trading behavior like cancelling orders too much). When trading is no longer needed the bond can be redeemed to get the coins back. Bonds system is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765).
+
+Client, other:
+
+- Refactored [login sequence](https://github.com/decred/dcrdex/pull/1903). Added a warning prompting to unlock the wallets ASAP to process active trades. { _what else does it fix?_ }
+- Refactored [BTC fee estimation](https://github.com/decred/dcrdex/pull/1967) and added external DOGE fee estimator. External fee estimation is useful as a fallback for SPV (light) wallets and also RPC (full) wallets that have been started recently and their fee estimation has not calibrated yet. { _also read 1888_ }
+- Added [default values](https://github.com/decred/dcrdex/pull/1981) for wallets created over RPC. This is to assist testing on simnet.
+- Moved more strings [translation files](https://github.com/decred/dcrdex/pull/1980).
+- Fixed SPV wallet [log file deletion](https://github.com/decred/dcrdex/pull/1946) during wallet recovery.
+- Fixed [fiat value](https://github.com/decred/dcrdex/pull/1983) on the Send form not including the transaction fee.
+
+Other:
+
+- Updated [build config](https://github.com/decred/dcrdex/pull/1979). { _minor_ }
+- Smaller fixes { 1995 }
 
 
 ### Android Wallet
