Dev DCRDEX part 2

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -163,20 +163,33 @@ _[DCRDEX](https://github.com/decred/dcrdex) is a non-custodial, privacy-respecti
 
 }
 
-Client, fidelity bonds:
+[v0.5.8 release](https://github.com/decred/dcrdex/releases/tag/v0.5.8):
+
+- Added [Core API options](https://github.com/decred/dcrdex/pull/1568) to skip time consuming operations on startup and shutdown. `NoAutoWalletLock` disables wallet locking on shutdown, which is useful for avoiding a potentially [very long](https://github.com/decred/dcrdex/pull/1568#discussion_r998877146) unlock operation. `NoAutoDBBackup` disables automatic database backups on shutdown. `UnlockCoinsOnLogin` instructs the wallet to unlock any coins (outputs) locked individually on login or wallet creation, this automates the manual recovery from multiple [issues](https://github.com/decred/dcrdex/pull/1568#discussion_r998880897) caused by dropped connections and crashes during order placement. These options can also be set using the new switches for the `dexc` command-line app, but they are really intended for people writing their own Go code to control the DEX client via the `Core` API.
+- Fixed handling of failed [fiat rates requests]({}) to external services, and adjusted their frequency to avoid hitting rate limits.
+
+USDC:
+
+- Added client and server support for swaps with [testnet USDC](https://github.com/decred/dcrdex/pull/1733). One review comment reminds to treat [floating point math](https://github.com/decred/dcrdex/pull/1733#issuecomment-1303491236) with great care. { dig 1733 for more notes }
+
+Fidelity bonds (client):
 
 - Third batch of [fidelity bonds](https://github.com/decred/dcrdex/pull/1820) implementation was merged, building on the lower-level API and server code added in October and November. This batch adds internal client code to create, store, post, confirm, and refund the bonds, as well as `dexc` app command for posting bond from the command line. Bonds implementaion was split into phases to make review feasible and progress in parallel with multiple other developments. Up next is account tier maintenance, bond renewal, settings, and UI components.
 - Documented bonds in the [spec](https://github.com/decred/dcrdex/pull/1994).
 - For a recap, time-locked [fidelity bonds](https://en.wikipedia.org/wiki/Fidelity_bond) will replace the current registration fee system. Users will lock coins in bonds and gain permissions to trade, as long as their bond tier is high enough (possibly compensating for poor trading behavior like cancelling orders too much). When trading is no longer needed the bond can be redeemed to get the coins back. Bonds system is a prerequisite for building a [server mesh](https://github.com/decred/dcrdex/issues/1765).
 
-Client, other:
+Other client changes:
 
-- Refactored [login sequence](https://github.com/decred/dcrdex/pull/1903). Added a warning prompting to unlock the wallets ASAP to process active trades. { _what else does it fix?_ }
-- Refactored [BTC fee estimation](https://github.com/decred/dcrdex/pull/1967) and added external DOGE fee estimator. External fee estimation is useful as a fallback for SPV (light) wallets and also RPC (full) wallets that have been started recently and their fee estimation has not calibrated yet. { _also read 1888_ }
+- Refactored [login sequence](https://github.com/decred/dcrdex/pull/1903) to better handle multiple login attempts and avoid repeating intialization steps. Added a warning prompting to unlock the wallets ASAP to process active trades.
+- Refactored [fee estimation](https://github.com/decred/dcrdex/pull/1967) common for Bitcoin-like assets and added external fee estimator for DOGE. External fee estimation is useful as a fallback for SPV (light) wallets and also RPC (full) wallets that have been started recently and their fee estimation has not calibrated yet.
 - Added [default values](https://github.com/decred/dcrdex/pull/1981) for wallets created over RPC. This is to assist testing on simnet.
 - Moved more strings [translation files](https://github.com/decred/dcrdex/pull/1980).
+- Database [compaction](https://github.com/decred/dcrdex/pull/1987) tuned to more aggressively free up space and report the savings more accurately.
+- Added more detailed [progress reporting](https://github.com/decred/dcrdex/pull/1997) during login.
+- Added [Arabic translation](https://github.com/decred/dcrdex/pull/1898) and the required tweaks for showing right-to-left text.
 - Fixed SPV wallet [log file deletion](https://github.com/decred/dcrdex/pull/1946) during wallet recovery.
 - Fixed [fiat value](https://github.com/decred/dcrdex/pull/1983) on the Send form not including the transaction fee.
+- Fixed crash with [empty config](https://github.com/decred/dcrdex/pull/2000) value. { _may group, pretty sure it affected no releases_ }
 
 Other:
 
