Updated PR section

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -323,14 +323,14 @@ Monde PR’s achievements:
 
 - Pitched one news update 
 - Secured one media interview 
-- Pitched eight commentary opps 
+- Pitched eight commentary ops 
 
 Secured the following news articles:
 
 - An article in [CoinJournal](https://coinjournal.net/news/expert-panel-what-mistakes-should-users-avoid-when-attempting-to-buy-cryptocurrencies/) featuring commentary from @jy-p on mistakes to avoid when buying cryptocurrencies. 
 - An article in [CoinJournal](https://coinjournal.net/news/expert-panel-what-is-your-biggest-tip-for-a-user-just-getting-into-crypto/) featuring commentary from @jy-p on tips for those just getting into crypto. 
 - An article in [CoinJournal](https://coinjournal.net/news/expert-panel-what-are-the-3-most-important-things-to-look-out-for-when-choosing-a-crypto-platform-to-sign-up-to/) featuring commentary from @jy-p on how to choose a crypto platform.
-- An piece in [Cryptonews](https://cryptonews.com/news/today-in-crypto-decred-launches-social-media-messaging-platform-opera-announces-a-suite-of-security-features-t-systems-mms-participates-in-chainlink-staking.htm) about the launch of Bison Relay.
+- A piece in [Cryptonews](https://cryptonews.com/news/today-in-crypto-decred-launches-social-media-messaging-platform-opera-announces-a-suite-of-security-features-t-systems-mms-participates-in-chainlink-staking.htm) about the launch of Bison Relay.
 - An article in [Invezz](https://invezz.com/news/2022/12/16/decred-launches-new-social-media-platform-bison-relay/) about the launch of Bison Relay 
 - @jy-p was interviewed by the [Piece of the Py show](https://www.youtube.com/watch?v=OS_AOyMdAeU), discussing the launch of Bison Relay, Decred’s use in the 2022 Brazil elections and the launch of DCRDEX v0.5.
 - An article in [BeInCrypto](https://beincrypto.com/focus-on-decentralization-and-empower-users-in-2023-says-industry/) featuring commentary from @jz on focusing on decentralization in 2023, with a DCRDEX mention. 
