Dev dcrwallet part 1

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -65,9 +65,8 @@ _[dcrd](https://github.com/decred/dcrd) is a full node implementation that power
 { _Check_ https://github.com/decred/dcrd/commits/master }
 
 - Always serve known filters when peers ask for it with [`getcfilterv2`](https://github.com/decred/dcrd/pull/3035) request. Previously, a node would not serve the filters until its chain was fully synced with the network. This limitation was inherited from the old bloom filters logic, where it helped to avoid performance drops, especially during the initial chain sync. The downside is that the node could appear to be unresponsive or stalled in a variety of production and testing scenarios. The bloom filters have been replaced by version 2 filters and they are relatively cheap to serve now, so the node can always respond to `getcfilterv2` requests, even before the chain is fully synced.
-- Removed [build flags](https://github.com/decred/dcrd/pull/3036) for Go versions prior to 1.17 now that the minimum supported version is Go 1.18.
-- Updated JSON-RPC API [documentation](https://github.com/decred/dcrd/pull/3032) for methods used for discovering transactions matching certain criteria: `loadtxfilter`, `notifynewtransactions`, and `rescan`. Information for removed API methods and notification has been removed { 3033 3034 }.
-- Smaller changes and cleanup { 3037 3038 3040 3041 }
+- Updated JSON-RPC API [documentation](https://github.com/decred/dcrd/pull/3032) for methods used for discovering transactions matching certain criteria: `loadtxfilter`, `notifynewtransactions`, and `rescan`. Information for removed API methods and notification has been [removed](https://github.com/decred/dcrd/pull/3034) { also 3033 }.
+- Smaller changes and cleanup { 3036 3037 3038 3040 3041 }
 
 
 ### dcrwallet
@@ -76,7 +75,8 @@ _[dcrwallet](https://github.com/decred/dcrwallet) is a wallet server used by com
 
 { _Check_ https://github.com/decred/dcrwallet/commits/master }
 
-- {}
+- Added [`--cpuprofile`](https://github.com/decred/dcrwallet/pull/2195) switch to capture CPU performance data and save it to a file.
+- Added fetching of new [treasury spends in SPV mode](https://github.com/decred/dcrwallet/pull/2194). This will be used by Decrediton to enable TSpend voting in more scenarios.
 
 
 ### dcrctl
