add some rel ext

--- a/journal/202212.md
+++ b/journal/202212.md
@@ -250,7 +250,7 @@ Community stats as of {date} (compared to {date}):
 
 { _Hint: Currently this is a mix of finances and governance. We may add the separate Finances section in the future._ }
 
-In December the new [treasury](https://dcrdata.decred.org/treasury) received {n} DCR worth ${} at December's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at December's rate, or ${} at November's billing rate of $21.92.
+In December the new [treasury](https://dcrdata.decred.org/treasury) received 8,712 DCR worth ${} at December's average rate of ${}. {} DCR was spent to pay contractors, worth ${} at December's rate, or ${} at November's billing rate of $21.92.
 
 The [treasury spend tx]({}) had {} outputs making payments to contractors, ranging from {} DCR to {} DCR.
 
@@ -441,16 +441,25 @@ In December DCR was trading between USDT {n.nn}-{n.nn} and BTC { five decimals }
 - CDBCs are the real danger while everybody is talking about FTX. Surprising coordination among many countries to launch in Spring 2023, including the digital dollar.
 - https://www.investing.com/news/cryptocurrency-news/cbdc-is-a-tool-to-combat-bitcoin-says-bank-of-indonesia-exec-2694335
 - U.S. savings reduced - if any notable unusual statistics in there.
-- EU plans to ban privacy coins - I forgot the link.
 - ConsenSys tracking MetaMask wallets.
 - USDC tx may be more expensive to process due to resources on blacklists https://odysee.com/@DigitalCashNetwork:c/USDCYTS:f
 - Crypto official means of payment in Brazil?
 - Sia grants, ideally some Dec news https://medium.com/sia-tech/grants-program-update-november-2022-83dd4a7e266e
 - A41 governance something, ideally some Dec news https://medium.com/a41-ventures/governance-memo-osmosis-november-week-4-2022-5b5720b77c4c
 
+In November, plans to outlaw privacy-enhancing crypto coins in the EU were [leaked](https://www.coindesk.com/policy/2022/11/15/privacy-enhancing-crypto-coins-could-be-banned-under-leaked-eu-plans/). The plans were put forward by the Czech officials who are currently chairing talks. Crypto-asset service providers and other institutions would be banned from holding or touching privacy-enhancing cryptocurrency under the proposal.
+
+The Grayscale Bitcoin Trust has been [puzzling](https://seekingalpha.com/article/4563283-grayscale-bitcoin-trust-rating-upgrade) and spooking some investors, as its "discount to NAV" (price of a share of the trust vs the value of the amount of Bitcoin one share represents) [increased](https://ycharts.com/companies/GBTC/discount_or_premium_to_nav) to a whopping 45%. In Summer 2022 Grayscale's application to convert the fund to an ETF was denied, so it is presently stuck in a position where investors cannot claim the BTC their shares entitle them to, although this decision is under appeal. Grayscale is owned by the Digital Currency Group, which also owns [troubled](https://www.forbes.com/sites/dereksaul/2023/01/05/crypto-broker-genesis-cuts-30-of-staff-reportedly-mulls-bankruptcy/) crypto lender Genesis, which had to suspend its operations in the wake of FTX's collapse, and in January cut 30% of its workforce.
+
+https://bitcoinmagazine.com/legal/bitcoin-miner-core-scientific-bankruptcy
+
 Avraham Eisenberg, the front man who took public credit for the "highly profitable trading strategy" which drained Mango Markets of $110 million, has ben [arrested](https://decrypt.co/118045/mango-markets-attacker-avraham-eisenberg-arrested-charged-with-market-manipulation-offenses) and charged with market manipulation offences.
 
-Popular crypto news and research providers The Block were [revealed](https://twitter.com/fintechfrank/status/1601295493102911488) to be secretly bankrolled by SBF through Alameda, using a loan to [buy](https://www.axios.com/2022/12/09/bankman-fried-funded-crypto-news-site-block) an apartment in the Bahamas for Block CEO McCaffrey. It appears that none of the Block's staff were aware of the arrangement between SBF and McCaffrey, who has now resigned.
+Popular crypto news and research providers The Block were [revealed](https://twitter.com/fintechfrank/status/1601295493102911488) to be secretly bankrolled by SBF through Alameda, it looks like three loans were made to  Block CEO McCaffrey, one of which was used [buy](https://www.axios.com/2022/12/09/bankman-fried-funded-crypto-news-site-block) an apartment in the Bahamas. It appears that none of the Block's editorial staff were aware of the arrangement between SBF and McCaffrey, who has now resigned.
+
+The Balancer DAO community [agreed](https://decrypt.co/117590/how-balancer-dao-achieved-peace-with-a-clever-whale-named-humpy) to a [peace treaty](https://forum.balancer.fi/t/bip-128-peace-treaty/4128) with the veBAL (Balancer's governance token) whale who came to be known as Humpy. Humpy is the largest BAL holder and liquidity provider, and used their voting power to dominate Balancer's governance and increase the yield rates for the liquidity pools they were personally using. Balancer developers and the community mobilised to mitigate Humpy's self-dealing but Humpy was still able to extract significant profit by pointing BAL rewards to pools they created with high fee levels. The peace treaty was approved almost unanimously by the veBAL community in a token vote, Humpy agreed to not increase their BAL position any further and to unwind much of it, with assistance from community members to organise OTC trades.
+
+DFINITY Foundation [announced](https://finance.yahoo.com/news/internet-computer-brings-smart-contract-130000045.html) the launch of a Bitcoin integration with the Internet Computer (IC), with IC serving as a layer 2 for Bitcoin without a centralised bridge.
 
 
 
